[gd_scene load_steps=2 format=3 uid="uid://c8hsb7wpqjxnt"]

[ext_resource type="Script" path="res://scripts/ui/hud/GameHUD.gd" id="1_j3p4l"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_j3p4l")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPanel" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="LeftSection" type="VBoxContainer" parent="VBox/TopPanel"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HealthBar" type="ProgressBar" parent="VBox/TopPanel/LeftSection"]
layout_mode = 2
custom_minimum_size = Vector2(200, 25)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBox/TopPanel/LeftSection/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
text = "100/100"
horizontal_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="VBox/TopPanel/LeftSection"]
layout_mode = 2
custom_minimum_size = Vector2(200, 25)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="ManaLabel" type="Label" parent="VBox/TopPanel/LeftSection/ManaBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
text = "100/100"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="VBox/TopPanel/LeftSection"]
layout_mode = 2
custom_minimum_size = Vector2(200, 25)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="VBox/TopPanel/LeftSection/StaminaBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
text = "100/100"
horizontal_alignment = 1

[node name="CenterSection" type="VBoxContainer" parent="VBox/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameClock" type="Label" parent="VBox/TopPanel/CenterSection"]
layout_mode = 2
text = "12:00 PM"
horizontal_alignment = 1

[node name="BuffsContainer" type="HBoxContainer" parent="VBox/TopPanel/CenterSection"]
layout_mode = 2
alignment = 1

[node name="DebuffsContainer" type="HBoxContainer" parent="VBox/TopPanel/CenterSection"]
layout_mode = 2
alignment = 1

[node name="RightSection" type="VBoxContainer" parent="VBox/TopPanel"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MinimapContainer" type="Panel" parent="VBox/TopPanel/RightSection"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="Minimap" type="Control" parent="VBox/TopPanel/RightSection/MinimapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BottomPanel" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 8

[node name="LevelLabel" type="Label" parent="VBox/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 0
text = "NÃ­vel 1"

[node name="XPBar" type="ProgressBar" parent="VBox/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 20)
max_value = 100.0
show_percentage = false

[node name="HotbarContainer" type="VBoxContainer" parent="VBox/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 2

[node name="Hotbar" type="HBoxContainer" parent="VBox/BottomPanel/HotbarContainer"]
layout_mode = 2

[node name="ChatContainer" type="VBoxContainer" parent="VBox/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(300, 0)

[node name="ChatBox" type="RichTextLabel" parent="VBox/BottomPanel/ChatContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 100)
bbcode_enabled = true
scroll_following = true

[node name="ChatInput" type="LineEdit" parent="VBox/BottomPanel/ChatContainer"]
layout_mode = 2
placeholder_text = "Digite sua mensagem..."